fix: playlist overflow

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ header {
 header .wrap {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     width: 15rem;
     height: 100%;
     background-color: black;
@@ -110,6 +109,11 @@ header ul i {
     vertical-align: middle;
 }
 
+.playlist {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
 header ul {
     list-style: none;
     margin-top: 1.5rem;
@@ -126,10 +130,10 @@ hr {
     border-color: #a3a3a3;
 }
 
-header .profile i {
-    color: #a3a3a3;
+.profile img {
+    margin-bottom: -5px;
+    margin-right: 9px;
 }
-
 .profile-link {
     display: inline-block;
     background-color: #808080;
@@ -179,6 +183,7 @@ section .fa-circle-play {
 
 .upgrade {
     background-color: #080b12;
+    opacity: 0.5;
     height: 5.4rem;
     position: sticky;
     top: 0;
